# ETF-Analyzer

./: README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
etf-analyzer/: Makefile
etf-analyzer/etf_analyzer/: __init__.py  dataset.py
etf-analyzer/etf_analyzer/modeling/: predict.py  train.py
etf_analyzer/: features.py  plots.py
