[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "etf_analyzer"
version = "0.0.1"
description = "Analysis and visualization of ETF portfolio diversification"
authors = [
  { name = "Gabriel Amezcua" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["etf_analyzer"]
include = ["pyproject.toml", "etf_analyzer/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["etf_analyzer"]
force-sort-within-sections = true

